# ImageMagick

./: CMakeLists.txt  conanfile.py
.github/workflows/: app-image.yml  codeql-analysis.yml  daily.yml  release.yml
Magick++/: CMakeLists.txt
Magick++/demo/: CMakeLists.txt  demos.tap
Magick++/tests/: CMakeLists.txt  tests.tap
MagickCore/: CMakeLists.txt  nt-base.h  opencl.c  version.c
MagickWand/: CMakeLists.txt  MagickWand.h
cmake/: checks.cmake  configure.cmake  delegates.cmake  parse_version.cmake  platform_vars.cmake  test_helpers.cmake
coders/: dng.c  heic.c
config/: CMakeLists.txt  ImageMagick.rc.cmake  config.h.cmake
tests/: CMakeLists.txt  cli-colorspace.tap  cli-pipe.tap  drawtest.tap  validate-colorspace.tap  validate-compare.tap  validate-composite.tap  validate-convert.tap  validate-formats-disk.tap  validate-formats-map.tap  validate-formats-memory.tap  validate-identify.tap  validate-import.tap  validate-magick.tap  validate-montage.tap  validate-stream.tap  wandtest.tap
utilities/: CMakeLists.txt
